# rules_hocon

./: .bazelrc  .bazelversion  .gitignore  .scalafmt.conf  .travis.yml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  dependencies.yaml  generate-deps.sh  hocon_maven_install.json  workspace.bzl
.github/workflows/: ci.yml
hocon-compiler/: BUILD.bazel
hocon-compiler/src/: Compiler.scala  ConfigMerger.scala  ConfigParser.scala  PathCheckResolver.scala  ResolveLists.scala
rules/: hocon.bzl
scala/: BUILD.bazel
scripts/: format.sh  gen-deps.sh  prepare-path.sh  travis.sh
tests/: run_tests.sh
tests/env_keys/: BUILD.bazel  test.sh
tests/env_keys/config/: bad.conf  env1_keys  good.conf
tests/general/: BUILD.bazel  expected.conf  test.sh
tests/general/config/: 1.conf  2.conf  base.conf  env2_keys  env_keys
tests/optional_includes/: BUILD.bazel  test.sh
tests/optional_includes/config/: 1.conf  3.conf
tools/: bazel  bazel.rc  install-bazel-deps.sh
