load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

buildifier(
    name = "buildifier_check",
    mode = "check",
)

alias(
    name = "scalafmt",
    actual = "//hocon-compiler:hocon-compiler.format",
)

alias(
    name = "scalafmt-test",
    actual = "//hocon-compiler:hocon-compiler.format-test",
)
