load("@rules_scala_annex//rules:scala_with_scalafmt.bzl", "scala_binary")

scala_binary(
    name = "hocon-compiler",
    srcs = glob(["src/**/*.scala"]),
    format = True,
    jvm_flags = ["-Dfile.encoding=UTF-8"],
    main_class = "ruleshocon.Compiler",
    scalacopts = [
        "-Xfatal-warnings",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@hocon_maven//:com_typesafe_config",
        "@hocon_maven//:org_rogach_scallop_2_13",
    ],
)
