load(
    "@rules_scala_annex//rules:scala.bzl",
    "configure_bootstrap_scala",
    "configure_zinc_scala",
    "scala_library",
)

scala_version = "2.13.10"

compiler_classpath = [
    "@hocon_maven//:org_scala_lang_scala_compiler",
    "@hocon_maven//:org_scala_lang_scala_library",
    "@hocon_maven//:org_scala_lang_scala_reflect",
]

runtime_classpath = [
    "@hocon_maven//:org_scala_lang_scala_library",
]

configure_bootstrap_scala(
    name = "bootstrap",
    compiler_classpath = compiler_classpath,
    runtime_classpath = runtime_classpath,
    version = scala_version,
    visibility = ["//visibility:public"],
)

configure_zinc_scala(
    name = "zinc",
    compiler_bridge = "@hocon_maven//:org_scala_sbt_compiler_bridge_2_13",
    compiler_classpath = compiler_classpath,
    global_scalacopts = [
        "-Xfatal-warnings",
        "-deprecation",
        "-feature",
    ],
    runtime_classpath = runtime_classpath,
    version = scala_version,
    visibility = ["//visibility:public"],
)

alias(
    name = "default_scala",
    actual = ":zinc",
    visibility = ["//visibility:public"],
)
