load("@rules_scala_annex//rules:register_toolchain.bzl", "register_zinc_toolchain")

scala_version = "2.13.10"

compiler_classpath = [
    "@hocon_maven//:org_scala_lang_scala_compiler",
    "@hocon_maven//:org_scala_lang_scala_library",
    "@hocon_maven//:org_scala_lang_scala_reflect",
]

runtime_classpath = [
    "@hocon_maven//:org_scala_lang_scala_library",
]

register_zinc_toolchain(
    name = "zinc",
    compiler_bridge = "@hocon_maven//:org_scala_sbt_compiler_bridge_2_13",
    compiler_classpath = compiler_classpath,
    global_scalacopts = [
        "-Xfatal-warnings",
        "-deprecation",
        "-feature",
    ],
    runtime_classpath = runtime_classpath,
    version = scala_version,
    visibility = ["//visibility:public"],
)
